Native/Test/KL/alias-errors.out
alias-errors.kl:5:1: error: 'UnregisteredType': type not registered
alias-errors.kl:7:1: error: type 'AliasTypeTwo' already registered with a different definition
