Native/Test/KL/alias-errors.kl
/*
 *  Copyright 2010-2012 Fabric Technologies Inc. All rights reserved.
 */

alias UnregisteredType AliasTypeOne;
alias Integer AliasTypeTwo;
alias Scalar AliasTypeTwo;
